@@ -1604,28 +1604,6 @@ name|containermanager
 operator|.
 name|container
 operator|.
-name|ChangeContainerResourceEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|server
-operator|.
-name|nodemanager
-operator|.
-name|containermanager
-operator|.
-name|container
-operator|.
 name|ContainerEvent
 import|;
 end_import
@@ -1921,6 +1899,28 @@ operator|.
 name|event
 operator|.
 name|LogHandlerEventType
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|nodemanager
+operator|.
+name|containermanager
+operator|.
+name|monitor
+operator|.
+name|ChangeMonitoringContainerResourceEvent
 import|;
 end_import
 
@@ -6891,15 +6891,13 @@ operator|!
 name|serviceStopped
 condition|)
 block|{
-name|dispatcher
-operator|.
-name|getEventHandler
+name|getContainersMonitor
 argument_list|()
 operator|.
 name|handle
 argument_list|(
 operator|new
-name|ChangeContainerResourceEvent
+name|ChangeMonitoringContainerResourceEvent
 argument_list|(
 name|containerId
 argument_list|,
