@@ -1044,6 +1044,24 @@ name|SystemClock
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
+name|resource
+operator|.
+name|Resources
+import|;
+end_import
+
 begin_class
 DECL|class|ContainerImpl
 specifier|public
@@ -1108,7 +1126,7 @@ name|containerId
 decl_stmt|;
 DECL|field|resource
 specifier|private
-specifier|final
+specifier|volatile
 name|Resource
 name|resource
 decl_stmt|;
@@ -2772,6 +2790,9 @@ name|toString
 argument_list|()
 argument_list|,
 name|exitCode
+argument_list|,
+name|getResource
+argument_list|()
 argument_list|)
 return|;
 block|}
@@ -2876,10 +2897,55 @@ name|getResource
 parameter_list|()
 block|{
 return|return
+name|Resources
+operator|.
+name|clone
+argument_list|(
 name|this
 operator|.
 name|resource
+argument_list|)
 return|;
+block|}
+annotation|@
+name|Override
+DECL|method|setResource (Resource targetResource)
+specifier|public
+name|void
+name|setResource
+parameter_list|(
+name|Resource
+name|targetResource
+parameter_list|)
+block|{
+name|Resource
+name|currentResource
+init|=
+name|getResource
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|resource
+operator|=
+name|Resources
+operator|.
+name|clone
+argument_list|(
+name|targetResource
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|metrics
+operator|.
+name|changeContainer
+argument_list|(
+name|currentResource
+argument_list|,
+name|targetResource
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
