@@ -35,6 +35,9 @@ name|START_MONITORING_CONTAINER
 block|,
 DECL|enumConstant|STOP_MONITORING_CONTAINER
 name|STOP_MONITORING_CONTAINER
+block|,
+DECL|enumConstant|CHANGE_MONITORING_CONTAINER_RESOURCE
+name|CHANGE_MONITORING_CONTAINER_RESOURCE
 block|}
 end_enum
 
