@@ -686,6 +686,105 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|changeContainer (Resource before, Resource now)
+specifier|public
+name|void
+name|changeContainer
+parameter_list|(
+name|Resource
+name|before
+parameter_list|,
+name|Resource
+name|now
+parameter_list|)
+block|{
+name|int
+name|deltaMB
+init|=
+name|now
+operator|.
+name|getMemory
+argument_list|()
+operator|-
+name|before
+operator|.
+name|getMemory
+argument_list|()
+decl_stmt|;
+name|int
+name|deltaVCores
+init|=
+name|now
+operator|.
+name|getVirtualCores
+argument_list|()
+operator|-
+name|before
+operator|.
+name|getVirtualCores
+argument_list|()
+decl_stmt|;
+name|allocatedMB
+operator|=
+name|allocatedMB
+operator|+
+name|deltaMB
+expr_stmt|;
+name|allocatedGB
+operator|.
+name|set
+argument_list|(
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|ceil
+argument_list|(
+name|allocatedMB
+operator|/
+literal|1024d
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|availableMB
+operator|=
+name|availableMB
+operator|-
+name|deltaMB
+expr_stmt|;
+name|availableGB
+operator|.
+name|set
+argument_list|(
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|floor
+argument_list|(
+name|availableMB
+operator|/
+literal|1024d
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|allocatedVCores
+operator|.
+name|incr
+argument_list|(
+name|deltaVCores
+argument_list|)
+expr_stmt|;
+name|availableVCores
+operator|.
+name|decr
+argument_list|(
+name|deltaVCores
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|addResource (Resource res)
 specifier|public
 name|void
