@@ -1430,6 +1430,11 @@ literal|""
 argument_list|,
 operator|-
 literal|1000
+argument_list|,
+name|container
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|applicationContainers
