@@ -1688,6 +1688,16 @@ argument_list|,
 literal|"nothing"
 argument_list|,
 literal|0
+argument_list|,
+name|conts
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1770,6 +1780,16 @@ argument_list|,
 literal|"nothing"
 argument_list|,
 literal|0
+argument_list|,
+name|conts
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
