@@ -6187,6 +6187,11 @@ argument_list|,
 name|containerDiagMsg
 argument_list|,
 name|exitCode
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|NodeId
@@ -6351,6 +6356,11 @@ argument_list|,
 name|containerDiagMsg
 argument_list|,
 name|exitCode
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|ApplicationAttemptId
@@ -6430,6 +6440,11 @@ argument_list|,
 literal|""
 argument_list|,
 literal|0
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|,
 name|anyNodeId
@@ -6686,6 +6701,11 @@ argument_list|,
 literal|""
 argument_list|,
 literal|0
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|,
 name|anyNodeId
@@ -7667,6 +7687,11 @@ argument_list|,
 literal|""
 argument_list|,
 literal|0
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|,
 name|anyNodeId
@@ -7785,6 +7810,11 @@ argument_list|,
 literal|""
 argument_list|,
 literal|0
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|,
 name|anyNodeId
@@ -7945,6 +7975,11 @@ argument_list|,
 literal|""
 argument_list|,
 literal|0
+argument_list|,
+name|amContainer
+operator|.
+name|getResource
+argument_list|()
 argument_list|)
 argument_list|,
 name|anyNodeId
